# datta-Aggregator

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_api.py  run_scraper.py  setup.sh  setup_sources.py
frontend/: app.js  index.html  styles.css
src/: __init__.py  config.py  scheduler.py
src/api/: __init__.py  auth.py  main.py  schemas.py
src/models/: __init__.py  contract.py  database.py  source.py  user.py
src/processors/: __init__.py  aggregator.py  scrape_manager.py
src/scrapers/: __init__.py  base.py  sam_gov.py  state_portals.py
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  test_helpers.py
